--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,7 @@
 kotlin.code.style=official
+#versions
+http4kVersion=4.11.0.1
+junitVersion=5.7.2
+junitLauncherVersion=1.7.0
+pesticideVersion=1.6.5
+striktVersion=0.31.0
