--- a/redis/docker-compose.yml
+++ b/redis/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     #    command: ["redis-server", "--appendonly", "yes"]
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
+      - REDIS_AOF_ENABLED=no
     ports:
       - "6379:6379"
     volumes:
